--- a/style.css
+++ b/style.css
@@ -14,13 +14,9 @@ body {
 
 /* CABECERA */
 .navbar {
-  background-color: #32C18C !important;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  background-color: #32C18C;
+  padding: 1rem 2rem;
 }
-
 
 .navbar-container {
   display: flex;
@@ -28,17 +24,12 @@ body {
   align-items: center;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0.5rem 0; /* mejora verticalmente la distribución */
 }
-
 
 .logo {
   height: 60px;
-  width: auto;
   object-fit: contain;
 }
-
-
 
 .nav-links {
   display: flex;
@@ -66,7 +57,7 @@ body {
 }
 
 .hero h1 {
-  font-size: 2.2rem;
+  font-size: 2.5rem;
   line-height: 1.3;
   margin-bottom: 1rem;
 }
@@ -75,3 +66,4 @@ body {
   font-size: 1rem;
   line-height: 1.6;
 }
+
