--- a/style.css
+++ b/style.css
@@ -152,6 +152,17 @@ section {
   line-height: 1.6;
 }
 
+@media (max-width: 480px) {
+  .ventaja-item {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .ventaja-item img {
+    margin-top: 0;
+  }
+}
 
 body {
   margin: 0;
