--- a/style.css
+++ b/style.css
@@ -94,10 +94,11 @@ section {
   max-width: 800px;
 }
 
-.propietarios-content h2 {
+.ventajas-content h2 {
   font-size: 2.2rem;
   color: #2C3E50;
-  margin-bottom: 1rem;
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
 .propietarios-content p {
