--- a/style.css
+++ b/style.css
@@ -223,4 +223,12 @@ section {
   color: #555;
   padding-bottom: 1rem;
 }
+.titulo-seccion {
+  font-family: 'Century Gothic', 'Segoe UI', sans-serif;
+  font-size: 2.2rem;
+  color: #2C3E50; /* Azul gris oscuro definido por ti */
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 2.5rem;
+}
 
