--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
 
 /* HERO */
 .hero {
-  background-image: url('img/hero-elche.jpg');
+  background-image: url('img/elche2.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
